# batou_ext

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.md.orig  CHANGES.txt  MANIFEST.in  README  README.md  changelog.sh  flake.nix  pyproject.toml  release-this.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yaml  main.yml  publish-to-pypi.yml
CHANGES.d/: 20231026_111011_cz_release_process.md  20231116_153857_cz.md  20231124_103923_ph_FC_32491_rid_of_userenv.md  20231205_145736_ph_FC_34648_reduce_mailhog_logoutput.md  20231206_155338_ph_FC_34644_improve_nix_purge_error.md  20231207_105555_nm_Make_timer_service_configurable.md  20231208_113313_cz_ts_nixos_module_support.md  20240119_140654_ph_log_oci_digests.md  20240201_170638_ph_multiple_environments_per_branch.md  20240206_113523_ph.md  20240214_133728_cz_HEAD.md  20240214_133815_cz_HEAD.md  20240214_133847_cz_HEAD.md  20240313_112633_cz_oci_codestlye.md  20240404_114123_git_remote_component.md  20240404_150323_elf-rpath-fix.md  20240408_101449_ph_versions_ini_fallback.md  20240412_113216_ph_oci_envfile_subcomponent_fix.md  20240416_113411_elikowa_batou_424_symlink_and_cleanup_add_systemd_run_task.md  20240417_145430_mb_FC_35378_httpwatchdog.md  20240422_131440_mb_FC_36393_s3_bootstrap.md  20240426_072058_cz_fix_async_delete.md  20240502_102711_fl_167_nixosmodul_context_sensible_data.md  20240503_141117_cz_oci_verify_speed.md  20240508_113136_cz_oci_optional_monitoring.md  20240508_114428_cz_oci_optional_monitoring.md  20240514_152634_mb_FC_38040_rpath_recursive.md  20240515_113454_cz_patch_3.md  20240603_134341_mb_FC_37339_public_smtp_name_default.md  20240604_091243_ph_FC_38383_include_expiry_date_in_cert_check.md  20240604_101830_ph_fix_container_restart_when_newer_version_locally_available.md  20240604_102506_ph_fix_container_restart_when_newer_version_locally_available.md  20240711_144012_ph_FC_39629_fix_versions_update.md  20240723_111336_ph_FC_38258_cleanup_via_tmpfiles.md  20240724_155934_mb_FC_39624_mailpit.md  20240812_122949_sweh_sweh_certificate_acl.md  20240812_130955_sweh_bugfix_ssl_cert.md  20240812_145407_cz_certificate_user.md  20240826_144928_ph.md  20240829_112623_ph_FC_40064_skip_serializing_instances.md  (+47 more)
nix/: batou_ext.nix
src/batou_ext/: acl.py  archive.py  config.py  cron.py  fcio.py  file.py  fpm.py  geoip.py  git.py  htpasswd.py  http.py  jenkins.py  journalbeat.py  keypair.py  kubernetes.py  mail.py  mailhog.py  memcached.py  mirror.py  modsecurity.py  mysql.py  nfs.py  nix.py  nixos.py  oci.py  php.py  postgres.py  python.py  rabbitmq.py  redis.py  run.py  s3.py  s3_bootstrap.py  ssh.py  ssl.py  systemd.py  versions.py
src/batou_ext/postfixadmin/: __init__.py  dovecot.py  goceptnet.py  postfix.py  postgres.py
src/batou_ext/postfixadmin/dovecot/: database.conf  local.conf
src/batou_ext/postfixadmin/postfix/: 40_local.cf  local.cf  postfixadmin_virtual_alias  postfixadmin_virtual_domains  postfixadmin_virtual_mailboxes  postfixadmin_virtual_sender_login
src/batou_ext/postfixadmin/postfixadmin/: config.local.php
src/batou_ext/resources/: cert.sh  check_systemd_unit.py  cron-wrapper.sh  geoip-update.sh  http-watchdog.nix  journalbeat.nix  loader.c  mailpit.nix  mirror.conf  modsecurity-configuration.nix  modsecurity.nix  oci-multitemplate.nix  oci-template.nix  php-fpm.conf  python.nix  rediscleanup.sh  scalable-service.nix  setupEnv.sh  supervisor.service  systemd.service  userenv.nix  watchdog-wrapper.py
src/batou_ext/resources/mailhog/: mailhog.conf  mailhog.nix
src/batou_ext/resources/php/: php-fpm.conf  php-fpm.sh  php.ini
src/batou_ext/resources/ssl/: local_certificate_check.sh
src/batou_ext/roundcube/: __init__.py  config.inc.php  postgres.py
src/batou_ext/tests/: test_configure.py  test_fcio.py  test_file.py  test_jenkins.py  test_mail.py  test_oci.py  test_postgres.py
