[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "batou_ext"
version = "2.4.37.dev0"
description = "A library of components for batou."
readme = "README.md"
license = {text = "BSD (2-clause)"}
authors = [
    {name = "Flying Circus", email = "support@flyingcircus.io"}
]
keywords = ["deployment"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.6"
dependencies = [
    "batou >= 2.3b4",
    "pyaml",
    "setuptools",
    "six",
    "InquirerPy",
]

[project.optional-dependencies]
test = [
    "boto3",
    "passlib>=1.7",
    "pytest",
    "pytest-mock",
]
version-select = ["InquirerPy"]
s3-bootstrap = ["boto3", "InquirerPy"]

[project.urls]
Homepage = "https://github.com/flyingcircusio/batou_ext"
Changelog = "https://github.com/flyingcircusio/batou_ext/blob/master/CHANGES.md"
Documentation = "https://batou.readthedocs.io"

[project.scripts]
jenkins = "batou_ext.jenkins:main"
fcio = "batou_ext.fcio:main"
versions = "batou_ext.versions:main"
s3_bootstrap = "batou_ext.s3_bootstrap:main [s3-bootstrap]"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 80
target-version = ['py36', 'py37', 'py38']

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
addopts = "--pyargs batou_ext"

[tool.scriv]
format = "md"
fragment_directory = "CHANGES.d"
output_file = "CHANGES.md"
version = "unreleased"
entry_title_template = ""
new_fragment_template = "- New changelog entry."
insert_marker = "- Nothing changed yet."
categories = []

[flake8]
ignore = [
    "E231",  # Missing whitespace after ',', ';', or ':' -- enforced by yapf config
    "W503",  # Line break occurred before a binary operator -- enforced by yapf config
    "W504",  # Line break occurred after a binary operator -- enforced by yapf config
]
max-line-length = 80

[zest.releaser]
version-levels = 3
history-file = "CHANGES.md"
release = "yes"
history_format = "md"
