[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "batou_ext"
version = "2.5.0"
description = "A library of components for batou."
readme = "README.md"
license = {text = "BSD (2-clause)"}
authors = [
    {name = "Flying Circus", email = "support@flyingcircus.io"}
]
keywords = ["deployment"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9"
dependencies = [
    "batou >= 2.5",
    "pyaml",
    "setuptools",
    "six",
    "InquirerPy",
]

[project.optional-dependencies]
test = [
    "boto3",
    "passlib>=1.7",
    "pytest",
    "pytest-mock",
]
version-select = ["InquirerPy"]
s3-bootstrap = ["boto3", "InquirerPy"]

[project.urls]
Homepage = "https://github.com/flyingcircusio/batou_ext"
Changelog = "https://github.com/flyingcircusio/batou_ext/blob/master/CHANGES.md"
Documentation = "https://batou.readthedocs.io"

[project.scripts]
jenkins = "batou_ext.jenkins:main"
fcio = "batou_ext.fcio:main"
versions = "batou_ext.versions:main"
s3_bootstrap = "batou_ext.s3_bootstrap:main [s3-bootstrap]"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--pyargs batou_ext"

[tool.scriv]
format = "md"
fragment_directory = "CHANGES.d"
output_file = "CHANGES.md"
version = "unreleased"
entry_title_template = ""
new_fragment_template = "- New changelog entry."
insert_marker = "- Nothing changed yet."
categories = []

[zest.releaser]
version-levels = 3
history-file = "CHANGES.md"
release = "yes"
history_format = "md"

[tool.ruff]
line-length = 80
